[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ChatBox.gd" type="Script" id=1]

[node name="ChatBox" type="PanelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" index="0"]

modulate = Color( 0.367188, 0.315552, 0.315552, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1010.0
margin_bottom = 558.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Grow Direction", "Material", "Size Flags", "Visibility" ]

[node name="MessageBox" type="RichTextLabel" parent="VBoxContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.277344, 0.983063, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "COMMUNICATIONS ONLINE..."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "COMMUNICATIONS ONLINE..."
scroll_active = true
scroll_following = true
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Size Flags" ]

[node name="EntryBox" type="LineEdit" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 562.0
margin_right = 1010.0
margin_bottom = 586.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[connection signal="text_entered" from="VBoxContainer/EntryBox" to="." method="_on_EntryBox_text_entered"]


